app/site/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-api
spec:
  type: NodePort
  selector:
    app: site-api
  ports:
  - name: http
    port: 3300
    protocol: TCP
    targetPort: 3300
