app/site/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-api
  annotations:
    # https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/
    kubernetes.io/ingress.class: alb
    # alb.ingress.kubernetes.io/load-balancer-name: api
    alb.ingress.kubernetes.io/certificate-arn: >-
      arn:aws:acm:ap-northeast-2:289952279049:certificate/309084d9-2a08-44fb-ba39-de57b76d1101
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    # alb.ingress.kubernetes.io/target-node-labels: "app-key=site"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: chekt-api
    alb.ingress.kubernetes.io/group.order: '1'
    # target group setting
    alb.ingress.kubernetes.io/target-group-attributes: >-
      deregistration_delay.timeout_seconds=30,slow_start.duration_seconds=30
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  # defaultBackend:
  #   service:
  #      name: site-api
  #      port:
  #        number: 3300
  rules:
  - http:
      paths:
      - path: /api/v2/sites
        pathType: Prefix
        backend:
          service:
            name: site-api
            port:
              number: 3300
